# mcp-servers

./: .gitignore  LICENSE  README.md  mcp-servers.code-workspace  tunnel.ps1  tunnel.sh
.github/workflows/: freelance-job-search.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
servers/_template/: .env.example  README.md  server.py
servers/freelance/: .env.example  README.md  config.py  requirements.txt.old  run_scheduled.py  server.py  test_search.py
servers/freelance/adapters/: __init__.py  arcdev.py  base.py  dice.py  freelancer.py  indeed.py  linkedin.py  remoteok.py  upwork.py  weworkremotely.py
servers/freelance/matching/: __init__.py  scorer.py
servers/freelance/models/: __init__.py  job.py
servers/freelance/notifications/: __init__.py  telegram.py
servers/github/: .env.example  README.md  server.py
shared/: pyproject.toml
shared/mcp_shared/: __init__.py  consent.py  oauth_provider.py  runner.py  security.py  transport.py
