[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-shared"
version = "0.1.0"
description = "Shared infrastructure for MCP server collection"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]
